<resources>
    <string name="app_name">bet match test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="table">Таблица</string>
    <string name="news">Новости</string>
    <string name="statistic">Статистика</string>
    <string name="settings">Настройки</string>

    <string name="russia">Россия</string>
    <string name="england">Англия</string>
    <string name="german">Германия</string>
    <string name="spanish">Испания</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>