<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screen.CountryFragment"
    android:background="@drawable/splash_act">

    <Button
        android:id="@+id/btnGerman"
        android:layout_width="350dp"
        android:layout_height="87dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/color_header"
        android:text="@string/german"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/btnEngland"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnEngland"
        app:layout_constraintTop_toBottomOf="@+id/btnEngland" />

    <Button
        android:id="@+id/btnSpanish"
        android:layout_width="350dp"
        android:layout_height="87dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/color_header"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnGerman"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnGerman"
        app:layout_constraintTop_toBottomOf="@+id/btnGerman"
        app:layout_constraintVertical_bias="0.0"
        android:text="@string/spanish"
        android:textSize="40sp"
        android:textStyle="bold|italic"/>

    <Button
        android:id="@+id/btnEngland"
        android:layout_width="350dp"
        android:layout_height="87dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/color_header"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/btnRussia"
        app:layout_constraintStart_toStartOf="@+id/btnRussia"
        app:layout_constraintTop_toBottomOf="@+id/btnRussia"
        android:text="@string/england"
        android:textSize="50sp"
        android:textStyle="bold|italic"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/betmatch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRussia"
        android:layout_width="350dp"
        android:layout_height="87dp"
        android:backgroundTint="@color/color_header"
        android:text="@string/russia"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.32999998" />



</androidx.constraintlayout.widget.ConstraintLayout>